--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h2 class="text-3xl font-semibold text-gray-100 mb-6 text-center">About Me</h2>
             <div class="flex flex-col md:flex-row items-center gap-8">
                 <div class="md:w-1/3">
-                    <img src="https://via.placeholder.com/150" alt="Muhammad Tayyab" class="rounded-full shadow-lg">
+                    <img src="https://drive.google.com/file/d/1B0vy3EsebW37utMdXyHmJAMNIhySGz-u/view?usp=drive_link" alt="Muhammad Tayyab" class="rounded-full shadow-lg">
                 </div>
                 <div class="md:w-2/3">
                     <p class="text-gray-300 text-lg">
