--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <section id="contact" class="bg-gray-800 rounded-lg shadow-md p-8 mb-12">
             <h2 class="text-3xl font-semibold text-gray-100 mb-6 text-center">Contact Me</h2>
             <div class="text-center">
-                <p class="text-lg text-gray-300 mb-4">Email: tayyabsaleem851@gmail.com</p>
+                <p class="text-lg text-gray-300 mb-4">Email: <a href="mailto:tayyabsaleem851@gmail.com" class="text-blue-600 hover:underline">tayyabsaleem851@gmail.com</a></p>
                 <p class="text-lg text-gray-300 mb-4">Phone: +92 334 3206982</p>
                 <p class="text-lg text-gray-300 mb-4">LinkedIn: <a href="https://www.linkedin.com/in/m-tayyab-73866a228/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">https://www.linkedin.com/in/m-tayyab-73866a228/</a></p>
             </div>
